# stonix

./: .env.example  Dockerfile  README.md  api.md  docker-compose.yml  go.mod  main.go  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts
app/: main.py
app/adapters/controllers/: callback_controller.py  log_controller.py
app/adapters/handlers/: linebot_handler.py
app/infra/web/: router.py
app/utils/: auth.py  event_log.py
app/views/: dashboard.py  trade_tracker.py
app/views/tabs/: calculator.py  reserve.py
apps/web/: README.md  TODOs.md  package.json
apps/web/docs/: README.md
docs/: README.md
handlers/: auth.go  book_handler.go
messages/: en.json  tw.json
models/: book_model.go
scripts/: build.sh  build_docker.sh  clean.sh  ec2-install-docker.sh  test.sh
src/: i18n.ts  middleware.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(home)/: layout.tsx  page.tsx
src/app/(signin)/: layout.tsx
src/app/[locale]/: layout.tsx  not-found.tsx
src/app/pricing/: page.tsx
src/components/: auth-header.tsx  footer.tsx  gradient.tsx  header.tsx  hero.tsx  language-toggle.tsx  network-pie-chart.tsx  site-header.tsx  user-nav.tsx
src/components/admin-panel/: admin-panel-layout.tsx  collapse-menu-button.tsx  content-layout.tsx  header.tsx  menu.tsx  (+4 more)
src/context/: auth-context.tsx
src/firebase/: config.ts
src/hooks/: use-toast.ts
src/lib/: activity-heatmap.ts  github.ts  menu-list.ts  providers.tsx  utils.ts
test/: test.go
views/: index.html
(+86 files in other folders)
